--- a/codesquare/src/main/resources/templates/planner/myPlanner.html
+++ b/codesquare/src/main/resources/templates/planner/myPlanner.html
@@ -54,9 +54,8 @@ $(function(){
 		TODO LIST 하고싶은 기능
 		1. TODO 쓰기
 		2. 마우스 hover 될 때 : 삭제아이콘 뜨고, 삭제아이콘 클릭하면 투두리스트 삭제
-		3. 마우스 한번 클릭 할 때 : 해당 투두리스트 완료 표시 ( 왼쪽엔 체크아이콘 보여짐, 내용은 줄 쳐지기, bg-color 어둡게 ) 
-			--> 완료됐을 경우 Ajax로 제일 하단으로 내리려고 했으나 취소하고 싶은 경우엔 다시 해당 목록을 찾아야된다는 부분때문에 하단으로 정렬되는 기능은 페이지에 처음 요청 했을때만 발생
-
+		3. 체크 아이콘 클릭 할 때 : 해당 투두리스트 완료 표시 ( 왼쪽엔 체크아이콘 보여짐, 내용은 줄 쳐지기, bg-color 어둡게 ) 
+		4. 마우스  클릭 할 때 : 해당 TODO 수정되고 ajax로 반영
 			
 			*/
 	
@@ -175,7 +174,7 @@ $(function(){
 	
  	
  	
- 	/* ###  4. 마우스 더블 클릭 할 때 : 해당 TODO 수정되고 ajax로 반영  ### */
+ 	/* ###  4. 마우스  클릭 할 때 : 해당 TODO 수정되고 ajax로 반영  ### */
  	
  	var currentValue;
 	$(document).on({
