--- a/codesquare/src/main/resources/templates/lecture/lectureIntroWritePage.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureIntroWritePage.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" 
 	xmlns:sd="http://www.thymeleaf.org/spring-data"
 	layout:decorator="layout/mainLayout"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="utf-8" />
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<!-- default header name is X-CSRF-TOKEN -->
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+<!-- <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/> -->
 <th:block layout:fragment="css">
 	<link rel="stylesheet" type="text/css"
 		th:href="@{/static/styles/lecture/lectureCustom.css}">
@@ -12,27 +16,47 @@
 		th:href="@{/webjars/dropzone/5.5.0/dropzone.css}">
 
 </th:block>
-
+<style type="text/css">
+#lectureImg-dropzone{
+	text-align: center;
+}
+</style>
 </head>
 <body id="write-page">
 	<!-- BoardKindId,UserId,Nickname,Title,Content,ParentId -->
 	<div class="container" layout:fragment="content">
 		<div class="lecture-write-container" ondragover="allowDrop(event)"
 			style="margin-top: 5px;">
-			<form action="/file-upload" class="dropzone" id="lectureImg-dropzone">
+			<h4 class="need-bottom" style="margin-top:10px;"><label >강의소개 등록</label></h4>
+			<form action="/file" class="dropzone" id="lectureImg-dropzone" method="post" enctype="multipart/form-data">
 				<div class="dz-default dz-message"><i class="fas fa-image fa-5x"></i><br />썸네일을 업로드 해주세요.</div>
 			</form>
+			<!-- <button type="button" id="btn-thumb-regist" class="btn btn-secondary btn-block" >썸네일 업로드</button> -->
 			<div class="col-sm-12 video-change-box"></div>
 			<div class="col-sm-12 lecture-content">
-				<form name="lectureResgistForm">
+				<form name="lectureintroResgistForm">
 					<div class="col-sm-12 lecture-title">
-						<input type="hidden" name="boardKindId" value="LrnPr"> <input
-							type="hidden" name="Nickname" th:value="@{${session.nickName}}">
+						<input type="hidden" name="boardKindId" value="LrnPr"> 
+						<input type="hidden" name="nickname" th:value="@{${session.nickName}}">
 						<input type="hidden" name="userId" th:value="@{${session.userId}}">
-						<input type="text" name="title" placeholder="제목을 입력해 주세요"
-							style="background: #F2F2F2; border: 2px solid gray; margin: 5px 0 5px 0"
+						<input type="text" name="title" placeholder="제목을 입력해 주세요"	style="background: #F2F2F2; border: 2px solid gray; margin: 5px 0 5px 0"
 							value="">
 					</div>
+					<div class="checkbox-area">
+					<label>강의태그</label>
+					<select name="tagId" class="selectpicker" data-live-search="true" title="강의태그를 선택해주세요" required="required">
+						<option th:each="tag:${lectureTag}" th:attr="data-tokens=${tag.langKind}" th:text="@{${tag.content}}"></option>
+					</select>
+					<select class="selectpicker" name="priceInfo" title="가격을 정해주세요." required="required">
+					  <option>무료</option>
+					  <option disabled="disabled">유료</option>
+					</select>					
+					</div>
+					<h4 class="need-bottom"><label >강의 한줄 소개</label></h4>
+					<textarea name="introContent" id="introContent"
+						style="width: 100%; height: 112px; min-width: 610px; overflow: visible;" placeholder="강의  소개내용을 입력해 주세요."
+						rows="25"></textarea>
+					<h4 class="need-bottom"><label >강의 소개</label></h4>
 					<textarea name="content" id="content"
 						style="width: 100%; height: 412px; min-width: 610px; overflow: visible;"
 						rows="25"></textarea>
@@ -47,17 +71,17 @@
 				</form>
 			</div>
 		</div>
-
 		<th:block layout:fragment="script">
 			<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 			<script type="text/javascript"
 				th:src="@{/static/js/smarteditor2/dist/js/service/HuskyEZCreator.js}"></script>
-			<script type="text/javascript"
-				th:src="@{/webjars/dropzone/5.5.0/dropzone.js}"></script>
-			<script type="text/javascript"	th:src="@{/static/js/Lecture/LectureWriteCustom.js}"></script>
-			<script type="text/javascript"	th:src="@{/static/js/Lecture/fileCustom.js}"></script>
+			<script type="text/javascript"	th:src="@{/webjars/dropzone/5.5.0/dropzone.js}"></script>
+			<script type="text/javascript"	th:src="@{/static/js/lecture/fileCustom.js}"></script>
+			<script type="text/javascript"	th:src="@{/static/js/lecture/lectureWriteCustom.js}"></script>
+			<script type="text/javascript"	th:src="@{/static/js/lecture/lectureIntroWriteCustom.js}"></script>
 		</th:block>
 	</div>
 	<!-- end content -->
+	
 </body>
 </html>
