--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -35,6 +35,7 @@
 <script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.js}"></script>
 <script th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
 <script th:src="@{/webjars/waypoints/4.0.1/lib/jquery.waypoints.js}"></script>
+<script th:src="@{/webjars/jquery-serialize-object/2.1.0/jquery.serialize-object.js}"></script>
 <script th:src="@{/static/plugins/greensock/TweenMax.min.js}"></script>
 <script th:src="@{/static/plugins/greensock/TimelineMax.min.js}"></script>
 <script th:src="@{/static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
