--- a/codesquare/src/main/resources/templates/lecture/lecture.html
+++ b/codesquare/src/main/resources/templates/lecture/lecture.html
@@ -191,10 +191,15 @@
 		      </div>
 	    	</div>
 	  	</div>
+	  	<th:block layout:fragment="script">
 		<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
-		<script type="text/javascript"
-			th:src="@{/static/js/Lecture/LectureCustom.js}"></script>
+		<script type="text/javascript"	th:src="@{/static/js/smarteditor2/dist/js/service/HuskyEZCreator.js}"></script>
+		<script type="text/javascript"	th:src="@{/webjars/dropzone/5.5.0/dropzone.js}"></script>
+		<script type="text/javascript"	th:src="@{/static/js/lecture/fileCustom.js}"></script>
+		<script type="text/javascript"	th:src="@{/static/js/lecture/lectureCustom.js}"></script>
+	</th:block>
 	</div>
 	<!-- end content -->
+	
 </body>
 </html>
