--- a/codesquare/src/main/resources/templates/fragments/footer.html
+++ b/codesquare/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footer id="footer" class="section footer-classic context-dark bg-image" style="background: #2d3246;" th:fragment="footerFragment">
-        <!-- <div class="container">
+<div class="container">
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
               <div class="pr-xl-4"><a class="brand" href="/"><img class="brand-logo-light" src="/static/images/logo.png" alt="noImg"></a>
@@ -45,5 +45,5 @@
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
           <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
-        </div> -->
+        </div>
       </footer>
