--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -36,7 +36,7 @@
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <footer th:replace="fragments/footer :: footerFragment"></footer> 
 
-<!-- <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script> -->
+<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/webjars/popper.js/1.14.6/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.js}"></script>
 <script th:src="@{/webjars/bootstrap-select/1.13.3/js/bootstrap-select.js}"></script>
