--- a/codesquare/src/main/resources/static/styles/member/myPage.css
+++ b/codesquare/src/main/resources/static/styles/member/myPage.css
@@ -1,45 +1,47 @@
-/* @charset "UTF-8";
+ @charset "UTF-8";
+
+body {
+font-family: 'Nanum Gothic', sans-serif;
+color:#321956;
+}
+
+.sidebar {
+	position: fixed;
+}
 
 
-.inner nav {
-	float: left;
-	width: 25%;
-	background: green;
+.mybtn {
+	border-radius: 50px;
+	border: 1px solid #552796;
+	color: #552796;
+}
+
+.mybtn:hover {
+	background: #552796;
+	color: white;
+}
+
+
+#accept-dialog, #decline-dialog, #cancel-dialog   {
+	display: none;
+	position: fixed;
+	left: calc(50% - 160px);
+	top: calc(50% - 70px);
+	width: 320px;
+	height: auto;
+	background: #fff;
+	border-radius:20px;
+	border: 1px #552796 solid;
 	padding: 20px;
+	z-index: 11;
+	padding: 10px;
 }
 
-.inner article {
-	padding-top: 50px;
-	float: left;
-	width: 60%;
-
+#accept-dialog-content,  #decline-dialog-content, #cancel-dialog-content{
+	
+	padding:15px;
 }
 
-.inner article ul {
-	list-style: none;
-	background-color: #444;
-	text-align: center;
-	padding: 0;
-	margin: 0;
-}
 
-.inner article  li {
-  padding:10px;
-  line-height: 40px;
-  font-family: sans-serif;
-  font-size: 1em;
-  text-decoration: none;
-  color: #ddd;
-  display: inline;
-  transition: .2s background-color;
-}
 
-.inner article  li:hover {
-	background-color: #66a;
-}
 
-.inner article  li.active {
-	background-color: #ccf;
-	color: #444;
-
-} */
