--- a/codesquare/src/main/resources/templates/member/login/signUp.html
+++ b/codesquare/src/main/resources/templates/member/login/signUp.html
@@ -1,59 +1,98 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 	layout:decorator="layout/mainLayout"
+<html xmlns:th="http://www.thymeleaf.org"
+	layout:decorator="layout/mainLayout"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
 <!-- default header name is X-CSRF-TOKEN -->
-<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+<meta id="_csrf_header" name="_csrf_header"
+	th:content="${_csrf.headerName}" />
 <title>Insert title here</title>
-
-
 <body>
-<div class="container" layout:fragment="content">
-	<form id="signUpForm" method="post">
-		<h2>회원가입</h2>
+	<div class="container" layout:fragment="content">
+
+		<br /> <br /> <br />
+		<div class="col-md-5 mx-auto">
+			<div class="myform form ">
+				<div class="logo mb-3">
+					<div class="col-md-12 text-center">
+						<br />
+						<h2>회원가입</h2>
+						<br />
+					</div>
+				</div>
+				<form id="signUpForm" method="post">
+					<div class="form-group py-2">
+						<label for="userId">아이디</label> <input type="text" name="userId"
+							class="form-control" id="userId" aria-describedby="idCheckMsg">
+						<span class="small" id="idCheckMsg"><i
+							class="fas fa-info-circle"></i> 아이디는 영문,숫자 4자 이상 20자 이하 </span>
+					</div>
+					<div class="form-group">
+						<label for="password">비밀번호</label> <input type="password"
+							name="password" class="form-control" id="password"
+							aria-describedby="pwCheckMsg">
+					</div>
+					<div class="form-group">
+						<label for="rePassword">비밀번호 재확인</label> <input type="password"
+							name="rePassword" class="form-control" id="rePassword"
+							aria-describedby="pwCheckMsg"> <span class="small"
+							id="pwCheckMsg"><i class="fas fa-info-circle"></i> 비밀번호는
+							영문, 숫자를 포함한 6자 이상 20자 이하 </span>
+					</div>
+					<div class="form-group">
+						<label for="name">이름</label> <input type="text" name="name"
+							id="name" class="form-control">
+					</div>
+					<div class="form-group">
+						<label for="dateOfBirth">생년월일</label> <input type="date"
+							name="dateOfBirth" class="form-control">
+					</div>
+					<div class="form-group">
+						<label for="dateOfBirth">이메일</label> <input type="email"
+							name="email" class="form-control">
+						<span class="small" id="emailCheckMsg"></span>
+					 <input type="hidden"
+							th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+					</div>
+					<div class="col-md-12 text-center mb-3 py-2">
+						
+						<span class="small" id="signUpCheckMsg"></span>
+						<button type="button"
+							class=" btn btn-block mybtn tx-tfm" id="signUp">회원가입</button>
+					</div>
+					<div class="col-md-12 ">
+						<div class="login-or">
+							<hr class="hr-or">
+							<span class="span-or">or</span>
+						</div>
+					</div>
+					<div class="col-md-12 ">
+						<div class="form-group">
+							<p class="text-center">
+								<a th:href="@{/member/login}" id="signin">이미 가입한 회원이신가요?</a>
+							</p>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<th:block layout:fragment="script">
+			<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+			<script th:src="@{/static/js/member/signUp.js}"></script>
+		</th:block>
+		<th:block layout:fragment="css">
+			<link rel="stylesheet" type="text/css"  th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}">
+			<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Gothic">
+			<link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/5.7.1/css/all.min.css}" />
+			<link rel="stylesheet" type="text/css" th:href="@{/static/styles/member/signUp.css}">
+		</th:block>
+	</div>
 
 
-		<div>
-			아이디: <input type="text" name="userId" id="userId" required /> <span
-				id="idValidate">중복확인</span> <br />
-				<span id="idCheckMsg">아이디는 영문,숫자 최소
-				5자 이상 20자 이하 아이디</span>
-		</div>
-		<div>
-			이름: <input type="text" id="name" name="name" required>
-		</div>
-		<div>
-			생년월일: <input type="date" name="dateOfBirth" required>
-		</div>
-		<div>
-			비밀번호: <input type="password"  id="password" name="password" required>
-		</div>
-		<div>
-			비밀번호확인: <input type="password" id="rePassword" name="rePassword"
-				required><span id="pwCheckMsg">비밀번호는 영문,숫자를 포함한 최소 6자
-				이상 20자 이하 </span>
-		</div>
 
-		<div>
-			이메일: <input type="text" id="email" name="email" required> <span id="emailValidate">중복확인</span><br />
-			 <span
-				id="emailCheckMsg">이메일 중복 확인 하세요.</span>
-		</div>
 
-		<div>
-			<input type="checkbox" id="agree">동의합니다<br />
-				<span id="signUp" >회원가입</span>
-		</div>
-		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-	</form>
-
-<th:block layout:fragment="script">
-<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
- <script th:src="@{/static/js/member/signUp.js}"></script> 
-</th:block>
-</div>
 
 </body>
 </html>
